<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/t1"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:text="@string/size"
            android:textSize="17dp" />

        <SeekBar
            android:id="@+id/pt1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="24dp"
            android:max="70"
           />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/t2"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:text="@string/amount"
            android:textSize="17dp" />

        <SeekBar
            android:id="@+id/pt2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="24dp"
            android:max="10000"
             />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/t3"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:text="@string/speed"
            android:textSize="17dp" />

        <SeekBar
            android:id="@+id/pt3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="24dp"
            android:max="40"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/t4"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:text="@string/alpha"
            android:textSize="17dp" />

        <SeekBar
            android:id="@+id/pt4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="24dp"
            android:max="255" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="7dp"
        android:gravity="center_horizontal"
        android:text="@string/setting_detail_text"
        android:textSize="13dp" />

</LinearLayout>