<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="right" >

    <View
        android:id="@+id/emptyView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:id="@+id/overflow_ly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/overflow_help"
            android:layout_width="150dp"
            android:layout_height="45dp"
            android:background="@drawable/actionbar_overflow_item_bg"
            android:gravity="center_vertical"
            android:paddingLeft="13dp"
            android:text="@string/help"
            android:textColor="#464646"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/overflow_share"
            android:layout_width="150dp"
            android:layout_height="45dp"
            android:background="@drawable/actionbar_overflow_item_bg"
            android:gravity="center_vertical"
            android:paddingLeft="13dp"
            android:text="@string/share"
            android:textColor="#464646"
            android:textSize="20sp" />
        
        <TextView
            android:id="@+id/overflow_mail"
            android:layout_width="150dp"
            android:layout_height="45dp"
            android:background="@drawable/actionbar_overflow_item_bg"
            android:gravity="center_vertical"
            android:paddingLeft="13dp"
            android:text="@string/mail"
            android:textColor="#464646"
            android:textSize="20sp" />
    </LinearLayout>

</RelativeLayout>